--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 					<nav class="d-none d-lg-block main-menu">
 						<ul>
 							<li><a href="services.html">Услуги</a></li>
-							<li><a href="">Акции</a></li>
+							<li><a href="offers.html">Акции</a></li>
 							<li><a href="">каталог</a></li>
-							<li><a href="">Команда</a></li>
+							<li><a href="team.html">Команда</a></li>
 							<li><a href="">О нас</a></li>
 							<li><a href="">Контакты</a></li>
 						</ul>
@@ -74,56 +74,56 @@
 			<h2>Услуги</h2>
 			<div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 justify-content-center g-0 mb-4">
 				<div>
-					<a class="serv">
+					<a href="service-page.html" class="serv">
 						<img src="img/serv1.jpg" alt="">
 						<div>Стрижка</div>
 					</a>
 				</div>
 				<div>
-					<a class="serv">
+					<a href="service-page.html" class="serv">
 						<img src="img/serv2.jpg" alt="">
 						<div>Маникюр/Педикюр</div>
 					</a>
 				</div>
 				<div>
-					<a class="serv">
+					<a href="service-page.html" class="serv">
 						<img src="img/serv3.jpg" alt="">
 						<div>Наращивание ресниц</div>
 					</a>
 				</div>
 				<div>
-					<a class="serv">
+					<a href="service-page.html" class="serv">
 						<img src="img/serv4.jpg" alt="">
 						<div>Оформление бровей</div>
 					</a>
 				</div>
 				<div>
-					<a class="serv">
+					<a href="service-page.html" class="serv">
 						<img src="img/serv5.jpg" alt="">
 						<div>Окрашивание</div>
 					</a>
 				</div>
 				<div>
-					<a class="serv">
+					<a href="service-page.html" class="serv">
 						<img src="img/serv6.jpg" alt="">
 						<div>Косметология</div>
 					</a>
 				</div>
 				<div>
-					<a class="serv">
+					<a href="service-page.html" class="serv">
 						<img src="img/serv7.jpg" alt="">
 						<div>Макияж</div>
 					</a>
 				</div>
 				<div>
-					<a class="serv">
+					<a href="service-page.html" class="serv">
 						<img src="img/serv8.jpg" alt="">
 						<div>Эпиляция</div>
 					</a>
 				</div>
 			</div>
 			<div class="text-center">
-				<a href="#" class="accent fw_6 font-2 bb_1">Показать все</a>
+				<a href="services.html" class="accent fw_6 font-2 bb_1">Показать все</a>
 			</div>
 		</div>
 	</section>
@@ -151,7 +151,7 @@
 				<div class="swiper-1">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<div class="offer">
+							<div class="offer type-1">
 								<img src="img/serv2.jpg" alt="">
 								<div class="text">
 									<div class="title mb-2">
@@ -162,7 +162,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="offer">
+							<div class="offer type-2">
 								<img src="img/serv1.jpg" alt="">
 								<div class="text">
 									<div class="title mb-2">
@@ -173,7 +173,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="offer">
+							<div class="offer type-3">
 								<img src="img/serv7.jpg" alt="">
 								<div class="text">
 									<div class="title mb-2">
