--- a/offer-page.html
+++ b/offer-page.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Status - Услуги</title>
+	<title>Status - Акции - 10% Скидка на услуги визажиста</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -62,80 +62,36 @@
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-					<li class="breadcrumb-item"><a href="services.html">Услуги</a></li>
+					<li class="breadcrumb-item"><a href="offers.html">Акции</a></li>
+					<li class="breadcrumb-item"><a href="offer-page.html">10% Скидка на услуги визажиста</a></li>
 				</ol>
 			</nav>
 		</div>
 
-		<section id="sec-2">
-			<div class="container">
-				<h1 class="inner">Услуги</h1>
-				<div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 justify-content-center justify-content-md-start g-0 mb-4">
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv1.jpg" alt="">
-							<div>Стрижка</div>
-						</a>
+		<section id="sec-9">
+			<div class="container offer-info">
+				<div class="row gx-2 gx-sm-3 gx-md-4 gx-xl-5">
+					<div class="offset-0 offset-md-5 offset-lg-4 col-md-7 col-lg-8">
+						<h1 class="inner text-start">10% Скидка на услуги визажиста</h1>
 					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv2.jpg" alt="">
-							<div>Маникюр/Педикюр</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv3.jpg" alt="">
-							<div>Наращивание ресниц</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv4.jpg" alt="">
-							<div>Оформление бровей</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv5.jpg" alt="">
-							<div>Окрашивание</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv6.jpg" alt="">
-							<div>Косметология</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
+					<div class="col-6 col-md-5 col-lg-4">
+						<div class="offer type-3">
 							<img src="img/serv7.jpg" alt="">
-							<div>Макияж</div>
-						</a>
+							<div class="text">
+								<div class="title mb-2">
+									<span class="f_12">10%</span> скидка
+								</div>
+								<div class="desc">На услуги вазажиста</div>
+							</div>
+						</div>
 					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv8.jpg" alt="">
-							<div>Эпиляция</div>
-						</a>
+					<div class="col-6 col-md-7 col-lg-8">
+						<div class="title">Условия акции</div>
+						<p>Тут текст с условиями акции. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis pulvinar enim nunc volutpat pharetra ornare egestas. Dui at nibh magna pulvinar molestie duis. Sed faucibus vulputate molestie bibendum pellentesque. In pharetra ac vulputate etiam nisl sed sagittis nulla. Neque ridiculus in senectus augue neque. Fringilla duis bibendum convallis sociis pellentesque sed. Sapien feugiat dignissim facilisi semper. Id lobortis sed tellus tempor amet neque tellus, aliquam posuere. Amet vel nibh sit commodo sed id etiam nisi. Adipiscing tellus, sagittis lectus amet id odio. In est consectetur aliquet risus, et. Pharetra justo velit purus amet, sed elit enim. Nunc leo vulputate faucibus tincidunt sed enim ridiculus mi volutpat. Facilisis auctor velit urna id at in.</p>
+						<p>Neque fermentum in nisl laoreet elementum. Posuere semper diam tellus, praesent pellentesque et porta ac. Augue ut aliquet sed egestas nisl. Consequat eros, elit velit sit nisl. Ut pretium nisl nunc a, enim molestie at. Fermentum aliquam ut tempus sed aliquam a et cursus ipsum. Cursus iaculis sed suspendisse porttitor. Adipiscing morbi nec eu varius risus facilisis. Id nulla facilisis ornare lobortis. Sodales sit dignissim suspendisse volutpat at massa adipiscing orci. Et et diam aliquet sed nibh mi, sit. Pulvinar eget urna, dui a, suspendisse. Arcu venenatis, fermentum</p>
 					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv1.jpg" alt="">
-							<div>Стрижка</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv2.jpg" alt="">
-							<div>Маникюр/Педикюр</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv3.jpg" alt="">
-							<div>Наращивание ресниц</div>
-						</a>
+					<div class="offset-0 offset-md-5 offset-lg-4 col-md-7 col-lg-8">
+						<button type="button" class="btn_main btn_1 mx-auto mt-4 mt-lg-5"><span class="f_09">Записаться</span></button>
 					</div>
 				</div>
 			</div>
