--- a/offers.html
+++ b/offers.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Status - Услуги</title>
+	<title>Status - Акции</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -62,79 +62,79 @@
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-					<li class="breadcrumb-item"><a href="services.html">Услуги</a></li>
+					<li class="breadcrumb-item"><a href="offers.html">Акции</a></li>
 				</ol>
 			</nav>
 		</div>
 
-		<section id="sec-2">
+		<section id="sec-4">
 			<div class="container">
-				<h1 class="inner">Услуги</h1>
-				<div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 justify-content-center justify-content-md-start g-0 mb-4">
+				<h1 class="inner">Акции</h1>
+				<div class="row row-cols-2 row-cols-lg-3 g-2 g-sm-4">
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv1.jpg" alt="">
-							<div>Стрижка</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
+						<a href="offer-page.html" class="offer type-1">
 							<img src="img/serv2.jpg" alt="">
-							<div>Маникюр/Педикюр</div>
+							<div class="text">
+								<div class="title mb-2">
+									<span class="f_12">30%</span> скидка
+								</div>
+								<div class="desc">действует в будние дни с 10:00 до 12:00</div>
+							</div>
 						</a>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv3.jpg" alt="">
-							<div>Наращивание ресниц</div>
+						<a href="offer-page.html" class="offer type-2">
+							<img src="img/serv1.jpg" alt="">
+							<div class="text">
+								<div class="title mb-2">
+									<span class="f_12">15%</span> скидка
+								</div>
+								<div class="desc">на стрижку горячими ножницами</div>
+							</div>
 						</a>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv4.jpg" alt="">
-							<div>Оформление бровей</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv5.jpg" alt="">
-							<div>Окрашивание</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv6.jpg" alt="">
-							<div>Косметология</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
+						<a href="offer-page.html" class="offer type-3">
 							<img src="img/serv7.jpg" alt="">
-							<div>Макияж</div>
+							<div class="text">
+								<div class="title mb-2">
+									<span class="f_12">10%</span> скидка
+								</div>
+								<div class="desc">На услуги вазажиста</div>
+							</div>
 						</a>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv8.jpg" alt="">
-							<div>Эпиляция</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv1.jpg" alt="">
-							<div>Стрижка</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
+						<a href="offer-page.html" class="offer type-1">
 							<img src="img/serv2.jpg" alt="">
-							<div>Маникюр/Педикюр</div>
+							<div class="text">
+								<div class="title mb-2">
+									<span class="f_12">30%</span> скидка
+								</div>
+								<div class="desc">действует в будние дни с 10:00 до 12:00</div>
+							</div>
 						</a>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv3.jpg" alt="">
-							<div>Наращивание ресниц</div>
+						<a href="offer-page.html" class="offer type-2">
+							<img src="img/serv1.jpg" alt="">
+							<div class="text">
+								<div class="title mb-2">
+									<span class="f_12">15%</span> скидка
+								</div>
+								<div class="desc">на стрижку горячими ножницами</div>
+							</div>
+						</a>
+					</div>
+					<div>
+						<a href="offer-page.html" class="offer type-3">
+							<img src="img/serv7.jpg" alt="">
+							<div class="text">
+								<div class="title mb-2">
+									<span class="f_12">10%</span> скидка
+								</div>
+								<div class="desc">На услуги вазажиста</div>
+							</div>
 						</a>
 					</div>
 				</div>
