--- a/service-page.html
+++ b/service-page.html
@@ -32,7 +32,7 @@
 					<nav class="d-none d-lg-block main-menu">
 						<ul>
 							<li><a href="services.html">Услуги</a></li>
-							<li><a href="">Акции</a></li>
+							<li><a href="offers.html">Акции</a></li>
 							<li><a href="">каталог</a></li>
 							<li><a href="">Команда</a></li>
 							<li><a href="">О нас</a></li>
@@ -194,37 +194,203 @@
 				</button>
 				<hr size="2" class="my-5">
 				<div class="font-2 fw_7 f_12 text-center mb-4">Мастера  по окрашиванию</div>
-				<div class="row row-cols-4 gx-0 gy-4">
-					<div>
-						<div class="master">
-							<img src="img/team/1.png">
-							<div>Елена</div>
-							<div>Топ коллорист</div>
-							<div class="rating justify-content-center">
-								<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-									<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-								</svg>
-								<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-									<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-								</svg>
-								<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-									<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-								</svg>
-								<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-									<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-								</svg>
-								<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-									<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-								</svg>
+
+				<div class="swiper-6 position-relative">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="master">
+								<img src="img/team/1.png">
+								<div class="p-2 p-md-4">
+									<div class="font-2 f_12 fw_6 mb-md-2"><a href="#">Елена</a></div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
+									<div class="rating justify-content-center mb-2 mb-md-3">
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+									</div>
+									<a href="#" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+										<span class="f_08 light-gray">о мастере</span>
+									</a>
+									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+										<span class="f_08">Записаться</span>
+									</button>
+								</div>
 							</div>
-							<button type="button" class="btn_main btn_sm btn_2 mx-auto">
-								<span class="f_08 light-gray">о мастере</span>
-							</button>
-							<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-								<span class="f_08">Записаться</span>
-							</button>
+						</div>
+						<div class="swiper-slide">
+							<div class="master">
+								<img src="img/team/4.png">
+								<div class="p-2 p-md-4">
+									<div class="font-2 f_12 fw_6 mb-md-2">Анастасия</div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
+									<div class="rating justify-content-center mb-2 mb-md-3">
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+									</div>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+										<span class="f_08 light-gray">о мастере</span>
+									</button>
+									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+										<span class="f_08">Записаться</span>
+									</button>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="master">
+								<img src="img/team/5.png">
+								<div class="p-2 p-md-4">
+									<div class="font-2 f_12 fw_6 mb-md-2">Максим</div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
+									<div class="rating justify-content-center mb-2 mb-md-3">
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+									</div>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+										<span class="f_08 light-gray">о мастере</span>
+									</button>
+									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+										<span class="f_08">Записаться</span>
+									</button>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="master">
+								<img src="img/team/1.png">
+								<div class="p-2 p-md-4">
+									<div class="font-2 f_12 fw_6 mb-md-2"><a href="#">Елена</a></div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
+									<div class="rating justify-content-center mb-2 mb-md-3">
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+									</div>
+									<a href="#" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+										<span class="f_08 light-gray">о мастере</span>
+									</a>
+									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+										<span class="f_08">Записаться</span>
+									</button>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="master">
+								<img src="img/team/4.png">
+								<div class="p-2 p-md-4">
+									<div class="font-2 f_12 fw_6 mb-md-2">Анастасия</div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
+									<div class="rating justify-content-center mb-2 mb-md-3">
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+									</div>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+										<span class="f_08 light-gray">о мастере</span>
+									</button>
+									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+										<span class="f_08">Записаться</span>
+									</button>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="master">
+								<img src="img/team/5.png">
+								<div class="p-2 p-md-4">
+									<div class="font-2 f_12 fw_6 mb-md-2">Максим</div>
+									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
+									<div class="rating justify-content-center mb-2 mb-md-3">
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+										<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+										</svg>
+									</div>
+									<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+										<span class="f_08 light-gray">о мастере</span>
+									</button>
+									<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+										<span class="f_08">Записаться</span>
+									</button>
+								</div>
+							</div>
 						</div>
 					</div>
+					<div class="swiper-pagination"></div>
 				</div>
 			</div>
 		</section>
