--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Status - Услуги</title>
+	<title>Status - Команда</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -34,7 +34,7 @@
 							<li><a href="services.html">Услуги</a></li>
 							<li><a href="offers.html">Акции</a></li>
 							<li><a href="">каталог</a></li>
-							<li><a href="">Команда</a></li>
+							<li><a href="team.html">Команда</a></li>
 							<li><a href="">О нас</a></li>
 							<li><a href="">Контакты</a></li>
 						</ul>
@@ -62,80 +62,291 @@
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-					<li class="breadcrumb-item"><a href="services.html">Услуги</a></li>
+					<li class="breadcrumb-item"><a href="team.html">Команда</a></li>
 				</ol>
 			</nav>
 		</div>
 
-		<section id="sec-2">
+		<section>
 			<div class="container">
-				<h1 class="inner">Услуги</h1>
-				<div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 justify-content-center justify-content-md-start g-0 mb-4">
+				<h1 class="inner">Команда</h1>
+				<div class="row row-cols-2 row-cols-sm-3 row-cols-lg-4 gx-0 gy-4">
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv1.jpg" alt="">
-							<div>Стрижка</div>
-						</a>
+						<div class="master">
+							<img src="img/team/1.png">
+							<div class="p-2 p-md-4">
+								<div class="font-2 f_12 fw_6 mb-md-2"><a href="#">Елена</a></div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
+								<div class="rating justify-content-center mb-2 mb-md-3">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<a href="#" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<span class="f_08 light-gray">о мастере</span>
+								</a>
+								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									<span class="f_08">Записаться</span>
+								</button>
+							</div>
+						</div>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv2.jpg" alt="">
-							<div>Маникюр/Педикюр</div>
-						</a>
+						<div class="master">
+							<img src="img/team/4.png">
+							<div class="p-2 p-md-4">
+								<div class="font-2 f_12 fw_6 mb-md-2">Анастасия</div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
+								<div class="rating justify-content-center mb-2 mb-md-3">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<span class="f_08 light-gray">о мастере</span>
+								</button>
+								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									<span class="f_08">Записаться</span>
+								</button>
+							</div>
+						</div>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv3.jpg" alt="">
-							<div>Наращивание ресниц</div>
-						</a>
+						<div class="master">
+							<img src="img/team/5.png">
+							<div class="p-2 p-md-4">
+								<div class="font-2 f_12 fw_6 mb-md-2">Максим</div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
+								<div class="rating justify-content-center mb-2 mb-md-3">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<span class="f_08 light-gray">о мастере</span>
+								</button>
+								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									<span class="f_08">Записаться</span>
+								</button>
+							</div>
+						</div>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv4.jpg" alt="">
-							<div>Оформление бровей</div>
-						</a>
+						<div class="master">
+							<img src="img/team/1.png">
+							<div class="p-2 p-md-4">
+								<div class="font-2 f_12 fw_6 mb-md-2"><a href="#">Елена</a></div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
+								<div class="rating justify-content-center mb-2 mb-md-3">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<a href="#" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<span class="f_08 light-gray">о мастере</span>
+								</a>
+								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									<span class="f_08">Записаться</span>
+								</button>
+							</div>
+						</div>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv5.jpg" alt="">
-							<div>Окрашивание</div>
-						</a>
+						<div class="master">
+							<img src="img/team/4.png">
+							<div class="p-2 p-md-4">
+								<div class="font-2 f_12 fw_6 mb-md-2">Анастасия</div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
+								<div class="rating justify-content-center mb-2 mb-md-3">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<span class="f_08 light-gray">о мастере</span>
+								</button>
+								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									<span class="f_08">Записаться</span>
+								</button>
+							</div>
+						</div>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv6.jpg" alt="">
-							<div>Косметология</div>
-						</a>
+						<div class="master">
+							<img src="img/team/5.png">
+							<div class="p-2 p-md-4">
+								<div class="font-2 f_12 fw_6 mb-md-2">Максим</div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
+								<div class="rating justify-content-center mb-2 mb-md-3">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<span class="f_08 light-gray">о мастере</span>
+								</button>
+								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									<span class="f_08">Записаться</span>
+								</button>
+							</div>
+						</div>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv7.jpg" alt="">
-							<div>Макияж</div>
-						</a>
+						<div class="master">
+							<img src="img/team/4.png">
+							<div class="p-2 p-md-4">
+								<div class="font-2 f_12 fw_6 mb-md-2">Анастасия</div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
+								<div class="rating justify-content-center mb-2 mb-md-3">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<span class="f_08 light-gray">о мастере</span>
+								</button>
+								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									<span class="f_08">Записаться</span>
+								</button>
+							</div>
+						</div>
 					</div>
 					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv8.jpg" alt="">
-							<div>Эпиляция</div>
-						</a>
+						<div class="master">
+							<img src="img/team/5.png">
+							<div class="p-2 p-md-4">
+								<div class="font-2 f_12 fw_6 mb-md-2">Максим</div>
+								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
+								<div class="rating justify-content-center mb-2 mb-md-3">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<button type="button" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
+									<span class="f_08 light-gray">о мастере</span>
+								</button>
+								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
+									<span class="f_08">Записаться</span>
+								</button>
+							</div>
+						</div>
 					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv1.jpg" alt="">
-							<div>Стрижка</div>
-						</a>
+				</div>
+				<button type="button" class="lightest-gray f_09 fw_5 bb_1 mx-auto mt-5">Показать еще</button>
+				<div class="row justify-content-end mt-4">
+					<div class="col-6">
+						<nav aria-label="Page navigation">
+							<ul class="pagination">
+								<li class="page-item"><a class="btn_main btn_xs f_08 btn_3" href="#">В начало</a></li>
+								<li class="page-item"><a class="page-link" href="#">1</a></li>
+								<li class="page-item"><a class="page-link active" href="#">2</a></li>
+								<li class="page-item"><a class="page-link" href="#">3</a></li>
+								<li class="page-item"><a class="btn_main btn_xs f_08 btn_3" href="#">Дальше</a></li>
+							</ul>
+						</nav>
 					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv2.jpg" alt="">
-							<div>Маникюр/Педикюр</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv3.jpg" alt="">
-							<div>Наращивание ресниц</div>
-						</a>
+					<div class="col-6 col-xxl-3">
+						<div class="d-flex align-items-center justify-content-end">
+							<div class="f_08 font-2 me-3">Перейти на страницу</div>
+							<input type="number" class="mini f_08 me-3">
+							<button type="button" class="f_08 btn_3 btn_main btn_xs">Перейти</button>
+						</div>
 					</div>
 				</div>
 			</div>
